syntax = "proto3";

package api.category;

option go_package = "category/api/category;category";


service Category {
	rpc CreateCategory (CreateCategoryRequest) returns (CreateCategoryReply);
	// rpc GetCategory(GetCategoryRequest) returns (GetCategoryReply);
	rpc ListCategory(ListCategoryRequest) returns (ListCategoryReply);
	rpc DeleteCategory(DeleteCategoryRequest) returns (DeleteCategoryReply);
	rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryReply);
}

message CategoryInfo{
	uint64 ID = 1;
	string Name = 2;
}

// create
message CreateCategoryRequest {
	string CategoryName = 1;
}
message CreateCategoryReply {
	string Msg = 1;
	uint32 code = 2;
}

// select
message ListCategoryRequest{
	uint32 PageSize = 1;
	uint32 PageNum = 2;
}
message ListCategoryReply{
	repeated CategoryInfo CategoryArray = 1;
	uint32 code = 2;
	string Msg = 3;
}
// delete
message DeleteCategoryRequest{
	uint64 ID = 1;
}
message DeleteCategoryReply{
	uint32 code = 1;
	string Msg = 2;
}
// update
message UpdateCategoryRequest{
	string CategoryName = 1;
	uint64 CategoryID = 2;
}
message UpdateCategoryReply{
	uint32 code = 1;
	string Msg = 2;
}